# dlcalc

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  checks  ds_memory.py  pyproject.toml  setup.py  tokens_calc.py
.github/workflows/: integration-test.yml  pypi-publish.yml  python-app.yml
dlcalc/: 3d_training_memory.py  dp_ring_viz.py  merge_traces.py  modeling.py  process_trace.py  rlhf_mem.py  samples_per_sec_to_mfu.py  samples_per_sec_to_tokens_per_day.py  states.py  summarize_checkpoint.py  topo_analyze.py  topology_evaluate.py  topology_scheduler.py  topology_visualizer.py  traces.py  training_3d.py
dlcalc/memory/threed/: states.py
dlcalc/utils/: comms.py  compute.py  configurations.py  data.py  hardware.py  math.py  model_3d.py  printing.py  size.py  states.py
dlcalc/utils/cluster/: ec2.py  kubernetes.py  topology.py
examples/: gpt_oss_120b.yaml  llama3_70b.yaml  llama3_70b_cross_dc.yaml
tests/integration/: test_3dtrn_cross_dc.py  test_3dtrn_predictions.py
tests/unit/utils/: README.md  test_cross_dc.py  test_data.py  test_math.py  test_model_3d.py
