[project]
name = "dlcalc"
readme = "README.md"
version = "0.1.5"
authors = [
    {name = "Justin Chiu", email = "jfc4050@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0.1"
]
[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.4.3"
]

[project.scripts]
3dtrn = "dlcalc.training_3d:main"
ckpt-summarize = "dlcalc.summarize_checkpoint:main"
sps2tpd = "dlcalc.samples_per_sec_to_tokens_per_day:main"

[tool.setuptools]
packages = ["dlcalc"]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
disallow_untyped_decorators = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # isort
    "I001"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
