[project]
name = "dlcalc"
readme = "README.md"
version = "0.1.6"
authors = [
    {name = "Justin Chiu", email = "jfc4050@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "boto3==1.34.133",
    "kubernetes==30.1.0",
    "PyYAML>=6.0.1",
    "pyvis==0.3.2",
    "tqdm==4.66.4"
]
[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.4.3"
]

[project.scripts]
3dtrn = "dlcalc.training_3d:main"
topoviz = "dlcalc.topology_visualizer:main"
topoeval = "dlcalc.topology_evaluate:main"
topoassign = "dlcalc.topology_scheduler:main"
sps2tpd = "dlcalc.samples_per_sec_to_tokens_per_day:main"
sps2mfu = "dlcalc.samples_per_sec_to_mfu:main"
ckpt-summarize = "dlcalc.summarize_checkpoint:main"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
disallow_untyped_decorators = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # isort
    "I"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dlcalc"]